# flashblocks-digestor

./: .env.example  Cargo.toml  README.md
crates/flashblocks-types/: Cargo.toml
crates/flashblocks-types/src/: aave.rs  chainlink.rs  flashblocks.rs  lib.rs  morpho.rs  univ3.rs
crates/streams/: Cargo.toml
crates/streams/src/: envelope.rs  lib.rs  output.rs  print.rs  sse.rs  trait.rs  websocket.rs
src/: args.rs  main.rs  types.rs  utils.rs
src/protocols/: aave.rs  chainlink.rs  mod.rs  morpho.rs  univ3.rs
src/stream/: error.rs  mod.rs  print.rs  trait.rs
