[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-sol-types = "0.8"
alloy-rpc-types = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = "0.24"
futures-util = "0.3"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }

[package]
name = "flashblocks-digestor"
version.workspace = true
edition.workspace = true

[dependencies]
flashblocks-types = { path = "crates/flashblocks-types" }
flashblocks-indexer-streams = { path = "crates/streams" }
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy = "0.15"
tracing.workspace = true
tracing-subscriber.workspace = true
time = { version = "0.3", features = ["macros"] }
brotli = "7"
thiserror.workspace = true

[[bin]]
name = "ws_subscriber"
path = "src/bin/ws_subscriber.rs"

